--- a/test/index.html
+++ b/test/index.html
@@ -150,7 +150,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         <h1 class="confirmation-title">Necesitamos Confirmación:</h1>
         <p class="confirmation-text">Haga Clic En Ver Ahora Si Tiene +35!</p>
         <div class="midas-cta-container"> 
-<a href="https://bm.mennitric.online/pv" id="midas-cta-button" class="midas-cta">
+<a href="https://co34.lifegoodfr.online/pv" id="midas-cta-button" class="midas-cta">
             MIRA AHORA
         </a>
     </div>
